--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
     
 <!--==================== HEADER ====================-->
 
-<div class="loading-screen">
+<!--<div class="loading-screen">
     <div class="loading-box">
       <p>Loading, please wait...</p>
     </div>
-  </div>
+  </div>-->
 
 
 
