--- a/about.html
+++ b/about.html
@@ -176,6 +176,7 @@ When it's time to rest, the bedrooms offer cozy retreats with soft linens and pl
    <span class="close">&times;</span>
    <img class="modal-content" id="img01">
    <div id="caption"></div>
+    <button class="adjustable-button">Pictures</button>
  </div>
       </div>
    </div>
