--- a/about.html
+++ b/about.html
@@ -178,7 +178,11 @@ When it's time to rest, the bedrooms offer cozy retreats with soft linens and pl
    <div id="caption"></div>
     <button class="adjustable-button">Pictures</button>
  </div>
+                 <button class="adjustable-button">Pictures</button>
+
       </div>
+              <button class="adjustable-button">Pictures</button>
+
    </div>
    </div>
 
