--- a/form.html
+++ b/form.html
@@ -22,9 +22,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/111.css">
-    <link rel="stylesheet" href="assets/css/form.css">
+    <link rel="stylesheet" href="css/form.css">
     
 </head>
 <body>
@@ -47,16 +45,12 @@
 <header class="header" id="header">
   <nav class="nav container">
 
-     <a href="index.html" class="nav__logo">
-        Milltronics-CZ
-
-        <img src="assets/img/Milltronics-logo-cutout.png" alt="company logo" class="logo">
-     </a>
+    <a href="index.html" class="logo">travel</a>
 
      
 
           <ul>
-           <li class="nav__item"> <a href="../cnc-web/index.html" class="nav__link1">Domů</a> </li>
+           <li class="nav__item"> <a href="index.html" class="nav__link1">Domů</a> </li>
           </ul>
         <!--close button-->
         <div class="nav__close" id="nav-close">
@@ -76,9 +70,9 @@
 <section>
   <div class="header_1">
   <div class="section__title">
-    <h2>ZÍSKEJTE CENU STROJE BĚHEM NĚKOLIKA MINUT!</h2>
+    <h2>ZÍSKEJTE SVE ODPOVEDI BĚHEM NĚKOLIKA MINUT!</h2>
     <div class="contact_form">
-    <p>VYBERTE SI STROJ, VYBERTE SI ZE SEZNAMU DOSTUPNÝCH MOŽNOSTÍ A NECHTE SI E-MAILEM ZASLAT ODHADOVANOU CENU.</p>
+    <p>Rezervujte svůj dokonalý pobyt již dnes! Jediný dům, ve kterém máte vše, co potřebujete, bez zbytečného vybírání.</p>
   </div>
 </div>
 
@@ -94,9 +88,9 @@
 
 
           <div class="contact_form">
-                <a href="#">Lukáš Změlík- jednatel společnosti</a>
-                <a href="#"><i class="fas fa-phone"></i>+420 728 123 456</a>
-                <a href="../cnc-web/form.html"><i class="fas fa-envelope"></i>Zmelik.Milltronics@gmail.com</a>
+                <a href="#">Jednatel Jmeno Prijmeni</a>
+                <a href="#"><i class="fas fa-phone"></i>+420 123 456 789</a>
+                <a href="form.html"><i class="fas fa-envelope"></i>jmeno@domena.cz</a>
                 <a href="https://www.instagram.com/miakhalifa/"><i class="fab fa-instagram"></i> instagram</a>
                 <a href='#'> <i class="fab fa-linkedin"></i> linkedIn</a>
              </div>
