--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
              <li class="nav__item"> <a href="index.html#Price" class="nav__link1">Price</a> </li>
 
 
-             <li class="nav__item"> <a href="../form.html" class="nav__link1">Kontakt</a> </li>
+             <li class="nav__item"> <a href="form.html" class="nav__link1">Kontakt</a> </li>
           
 
              <li class="nav__item"> <a href="#" class="nav__link1">Česky<i class="fas fa-caret-down"></i></a>
