--- a/parallax2.html
+++ b/parallax2.html
@@ -127,9 +127,9 @@
 
   <div class="container">
 
-    <div class="container-1" style="background:url(images/Forest-picture.jpg) no-repeat">
+    <div class="container-1" style="background:url(images/parallax/Forest-picture.jpg) no-repeat">
 
-        <div class="cloud">
+        <div class="cloud99">
 
             <img src="images\cloud1.png" alt="" style="--i:1"> 
             <img src="images\cloud2.png" alt="" style="--i:2">
