--- a/parallax2.html
+++ b/parallax2.html
@@ -127,7 +127,7 @@
 
   <div class="container">
 
-    <div class="container-1" style="background:url(parallax/Forest-picture.jpg) no-repeat">
+    <div class="container-1" style="background:url(images/Forest-picture.jpg) no-repeat">
 
         <div class="cloud99">
 
