--- a/index_EN.html
+++ b/index_EN.html
@@ -61,7 +61,7 @@
 
 
   <section class="header" id="header">
-    <a href="index.html" class="logo">zelená vila</a>
+    <a href="index_EN.html" class="logo">zelená vila</a>
     <nav class="nav__menu" id="nav-menu">
         <ul class="nav__list">
             <li class="nav__item">
@@ -69,7 +69,7 @@
                 
                 <div class="wrapper">
                     <label class="switch">
-                        <input type="checkbox" id="checkbox-toggle_EN" />
+                        <input type="checkbox" id="checkbox-toggle_CZ" />
                         <span class="slider">
                             <div class="fish">
                                 <div class="body"></div>
@@ -101,31 +101,29 @@
                             </div>
                         </div>
                     </label>
-                    <p class="text-under-toggle">English</p>
-
+                    <p class="text-under-toggle">česky</p>
                 </div>
             </li>
 
-            
             <li class="nav__item">
                 <div id="btn" class="fas fa-crow"></div>
-                <a href="index.html" class="nav__link1 active-link">úvod</a>
+                <a href="index_EN.html" class="nav__link1 active-link">home</a>
             </li>
             <li class="nav__item">
-                <a href="about.html" class="nav__link1">o nás</a>
+                <a href="about_EN.html" class="nav__link1">about</a>
             </li>
             <li class="nav__item">
-                <a href="package.html" class="nav__link1">doporučujeme</a>
+                <a href="package_EN.html" class="nav__link1">recomendation</a>
             </li>
 
 
 
             <li class="nav__item">
-                <a href="#" class="nav__link1">galerie<i class="fas fa-caret-down"></i></a>
+                <a href="#" class="nav__link1">gallery<i class="fas fa-caret-down"></i></a>
                 <div class="dropdown__menu">
                     <ul>
-                        <li><a href="parallax.html">léto</a></li>
-                        <li><a href="parallax2.html">zima</a></li>
+                        <li><a href="parallax_EN.html">summer</a></li>
+                        <li><a href="parallax2_EN.html">winter</a></li>
                     </ul>
                 </div>
             </li>
@@ -134,10 +132,10 @@
 
 
             <li class="nav__item">
-                <a href="index.html#Price" class="nav__link1">cena</a>
+                <a href="index_EN.html#Price" class="nav__link1">Price</a>
             </li>
             <li class="nav__item">
-                <a href="form.html" class="nav__link1">kontakt</a>
+                <a href="form_EN.html" class="nav__link1">Kontakt</a>
             </li>
         </ul>
     </nav>
@@ -206,12 +204,12 @@
     </div>
 
     <div class="content">
-        <h3>o nás</h3>
-        <p>Objevte naše klidné útočiště, které se nachází v blízkosti klidného lesa v tiché vesnici. 
-            Zde si můžete odpočinout v naší příjemné sauně, horké trubce a útulném krbu, 
-            vše navrženo pro vaši dokonalou relaxaci a pohodlí.</p>
+        <h3>about us</h3>
+        <p>Discover our peaceful haven, perfectly situated near a tranquil forest in a quiet village. 
+            Here, you can unwind with our inviting sauna, Hot tube, and cozy fireplace, 
+            all designed for your ultimate relaxation and comfort.</p>
 
-        <a href="about.html" class="btn">číst více</a>
+        <a href="about.html" class="btn">read more</a>
     </div>
 
 </section>
@@ -220,22 +218,22 @@
     <!-- service section starts -->
 
 <section class="service">
-    <h1 class="heading-title"> naše služby </h1>
+    <h1 class="heading-title"> our services </h1>
 
     <div class="box_ul">
     <div class="box-container">
         <div class="box">
             <img src="images/icon-1.png">
-            <h3>Popis</h3>
+            <h3>Description</h3>
     </div>
 
         <ul class="home_ul">
             <li class="home_li">Check-in 15:00-17:00 &ensp;-&ensp; Check-out 10:00-11:00</li>
-            <li class="home_li">Parkovací místo pro 3 auta u domu - zdarma</li>
-            <li class="home_li">vytápění plynem a krbem, <br> který přivádí teplo do celého domu.</li>
-            <li class="home_li">malá zvířata jsou vítána</li>
-            <li class="home_li">objekt je bezbariérový</li>
-            <li class="home_li">Wifi-v objektu</li>
+            <li class="home_li">Parking space for 3 cars near house-for free</li>
+            <li class="home_li">heating provided by gas and a fireplace, <br> which brings heat to the whole house.</li>
+            <li class="home_li">small animals are welcome</li>
+            <li class="home_li">the object is wheelchair accessible</li>
+            <li class="home_li">Wifi-in the object</li>
          </ul>
 
         </div>
@@ -247,13 +245,13 @@
         </div>
 
         <ul class="home_ul">
-            <li class="home_li">3 ložnice, 1 koupelna, 1 WC, 1 kuchyň, 1 obývací pokoj </li>
-            <li class="home_li">V domě máme místo pro 6-10 osob</li>
-            <li class="home_li">Velká zahrada, kde můžete také kempovat</li>
-            <li class="home_li">Sauna a vířivka v ceně</li>
-            <li class="home_li">krb pro vaše pohodlí</li>
-            <li class="home_li">Plně vybavená kuchyně</li>
-            <li class="home_li">stolní hry v češtině a angličtině <br> když není dobré počasí</li>
+            <li class="home_li">3 Bedrooms, 1 bathroom, 1 toilet, 1 kitchen, 1 living room </li>
+            <li class="home_li">We have a place for 6-10 people in the house</li>
+            <li class="home_li">Large garden where you can also camp</li>
+            <li class="home_li">Sauna and Hot tube included in the price</li>
+            <li class="home_li">a Fire place for your confort</li>
+            <li class="home_li">Fully equipped kitchen</li>
+            <li class="home_li">board games in Czech and English <br> when the weather is not good</li>
          </ul>
 
         </div>
@@ -266,16 +264,16 @@
     <div class="box-container">
         <div class="box">
             <img src="images/icon-3.png">
-            <h3>V objektu</h3>
+            <h3>Inventory</h3>
     </div>
 
         <ul class="home_ul">
-            <li class="home_li"> internet wifi, TV, žehlička, rádio, CD přehrávač,<br> DVD přehrávač, lednička, pohovka</li>
-            <li class="home_li"> společenské hry, dětská postýlka,<br> terasa, moskytiéra, krb/kamna, </li>
-            <li class="home_li"> Vířivka, sauna, krb, <br>objekt má bezbariérový přístup, vlastní vchod</li>
-            <li class="home_li"> elektrická trouba, sklokeramická varná deska, <br>mikrovlnná trouba, varná konvice, lednice, kávovar </li>
-            <li class="home_li"> pračka, myčka nádobí, jídelní posezení</li>
-            <li class="home_li"> jedna sprcha s toaletou</li>
+            <li class="home_li"> internet wifi, TV, iron, radio, cd player, dvd player, fridge, sofa</li>
+            <li class="home_li"> board games, cot, high chair, terrace, mosquito net, fireplace/stove, </li>
+            <li class="home_li"> Hot tube, sauna, wheelchair access, private entrance</li>
+            <li class="home_li"> electric oven, ceramic hob, microwave, kettle, fridge, coffee machine </li>
+            <li class="home_li"> washing machine, dishwasher, dining seating</li>
+            <li class="home_li"> one shower, with toilet</li>
          </ul>
 
         </div>
@@ -285,17 +283,17 @@
         <div class="box-container">
         <div class="box">
             <img src="images/icon-4.png">
-            <h3>v rámci domu</h3>
+            <h3>within the house</h3>
         </div>
 
         <ul class="home_ul">
             <li class="home_li">Sauna</li>
-            <li class="home_li">Vířivka</li>
+            <li class="home_li">Hot tube</li>
             <li class="home_li">Grill</li>
-            <li class="home_li">Venkovní posezení</li>
-            <li class="home_li">Terasa</li>
-            <li class="home_li">Tento dům se nachází v blízkosti lesa</li>
-            <li class="home_li">klidný a relaxační pobyt</li>
+            <li class="home_li">Outdoor seating</li>
+            <li class="home_li">Terrace</li>
+            <li class="home_li">This house is near the forest</li>
+            <li class="home_li">peaceful and relaxing stay</li>
          </ul>
 
         </div>
@@ -312,17 +310,17 @@
     <div class="box-container">
         <div class="box">
             <img src="images/icon-5.png">
-            <h3>Vhodné pro</h3>
+            <h3>Suitable for</h3>
     </div>
 
         <ul class="home_ul">
-            <li class="home_li">rodiny s dětmi</li>
-            <li class="home_li">páry</li>
-            <li class="home_li">seniory</li>
-            <li class="home_li">turisty</li>
-            <li class="home_li">skupiny</li>
-            <li class="home_li">rybáře</li>
-            <li class="home_li">pokud jste se nenašli, <br> zeptejte se o další informace</li>
+            <li class="home_li">for families with children</li>
+            <li class="home_li">for couples</li>
+            <li class="home_li">for the elderly</li>
+            <li class="home_li">for tourists</li>
+            <li class="home_li">for groups</li>
+            <li class="home_li">for fishermen</li>
+            <li class="home_li">if you did not find your self, <br> ask for more info</li>
 
          </ul>
 
@@ -331,16 +329,16 @@
         <div class="box-container">
         <div class="box">
             <img src="images/icon-6.png">
-            <h3>Ceny</h3>
+            <h3>Pricing</h3>
         </div>
 
         <ul class="home_ul">
-            <li class="home_li">Cena za objekt / noc:&ensp; 3 500 Kč – 7 500 Kč</a></li>
-            <li class="home_li">Cena za osobu/noc:&ensp; 580 Kč – 1 250 Kč</a></li>
-            <li class="home_li">Minimální délka pobytu:&ensp; 1 nebo více nocí</a></li>
-            <li class="home_li">Minimální počet osob:&ensp;&ensp; 1</a></li>
-            <li class="home_li">Malá zvířata vítána</a></li>
-            <li class="home_li">Děti také</a></li>
+            <li class="home_li">Price per object / night:&ensp; 3 500 Kč – 7 500 Kč</a></li>
+            <li class="home_li">Price per person/night:&ensp; 580 Kč – 1 250 Kč</a></li>
+            <li class="home_li">Minimum Length of Stay:&ensp; 1 or more nights</a></li>
+            <li class="home_li">Minimum number of persons:&ensp;&ensp; 1</a></li>
+            <li class="home_li">Small animals welcome</a></li>
+            <li class="home_li">children too</a></li>
          </ul>
 
         </div>
@@ -366,7 +364,7 @@
 <!-- home packages section starts -->
 <section class="home-packages">
 
-    <h1 class="heading-title">naše doporučení stojí za to navštívit</h1>
+    <h1 class="heading-title"> our recomendation worth to visit</h1>
 
     <div class="box-container">
 
@@ -376,8 +374,8 @@
         </div>
         <div class="content">
             <h3>Restaurant-pension</h3>
-            <p>Místo, kde si můžete dát typickou českou kuchyni.</p>
-            <a href="https://www.bukovansky-mlyn.cz/en/" class="btn">navštivte nyní</a>
+            <p>A place to eat some typical Czech cousine.</p>
+            <a href="https://www.bukovansky-mlyn.cz/en/" class="btn">visit now</a>
         </div>
     </div>
 
@@ -386,9 +384,9 @@
             <img src="images/kamenak_myslivna.jpg" alt="" srcset="">
         </div>
         <div class="content">
-            <h3>Restaurace v lese</h3>
-            <p>Rodinná restaurace, kterou stojí za to navštívit.</p>
-            <a href="https://www.tripadvisor.com/Restaurant_Review-g13370609-d13948123-Reviews-Kamenacka_Myslivna-Moravany_South_Moravian_Region_Moravia.html" class="btn">navštivte nyní</a>
+            <h3>Restaurant in the forest</h3>
+            <p>Family friendly restaurant worth to visit.</p>
+            <a href="https://www.tripadvisor.com/Restaurant_Review-g13370609-d13948123-Reviews-Kamenacka_Myslivna-Moravany_South_Moravian_Region_Moravia.html" class="btn">visit now</a>
         </div>
     </div>
         <div class="box">
@@ -396,14 +394,14 @@
             <img src="images/vinarna_skalak.jpg" alt="" srcset="">
         </div>
         <div class="content">
-            <h3>Vinný sklep</h3>
-            <p>Jedno z nejlepších míst, kde můžete ochutnat lahodné víno z jižní Moravy.</p>
-            <a href="https://sklepskalak.cz/" class="btn">navštivte nyní</a>
+            <h3>Wine cellar</h3>
+            <p>One of the best place to experience delicious wine, from South Moravia.</p>
+            <a href="https://sklepskalak.cz/" class="btn">visit now</a>
     </div>
 </div>
 </div>
 
-<div class="load-more"> <a href="package.html" class="btn">načíst více</a> </div>
+<div class="load-more"> <a href="package.html" class="btn">load more</a> </div>
 
 </section>
 
@@ -540,7 +538,6 @@
         });
     });
 </script>
-
 
 </body>
 </html>
