--- a/package_EN.html
+++ b/package_EN.html
@@ -33,15 +33,15 @@
 
 
 <section class="header" id="header">
-    <a href="index.html" class="logo">zelená vila</a>
+    <a href="index_EN.html" class="logo">zelená vila</a>
     <nav class="nav__menu" id="nav-menu">
         <ul class="nav__list">
             <li class="nav__item">
-  
+
                 
                 <div class="wrapper">
                     <label class="switch">
-                        <input type="checkbox" id="checkbox-toggle_EN" />
+                        <input type="checkbox" id="checkbox-toggle_CZ" />
                         <span class="slider">
                             <div class="fish">
                                 <div class="body"></div>
@@ -73,51 +73,52 @@
                             </div>
                         </div>
                     </label>
-                    <p class="text-under-toggle">English</p>
-
+                    <p class="text-under-toggle">česky</p>
                 </div>
             </li>
-  
-            
+
+
             <li class="nav__item">
                 <div id="btn" class="fas fa-crow"></div>
-                <a href="index.html" class="nav__link1 active-link">úvod</a>
+                <a href="index_EN.html" class="nav__link1 active-link">home</a>
             </li>
             <li class="nav__item">
-                <a href="about.html" class="nav__link1">o nás</a>
+                <a href="about_EN.html" class="nav__link1">about</a>
             </li>
             <li class="nav__item">
-                <a href="package.html" class="nav__link1">doporučujeme</a>
+                <a href="package_EN.html" class="nav__link1">recomendation</a>
             </li>
-  
-  
-  
+
+
+
             <li class="nav__item">
-                <a href="#" class="nav__link1">galerie<i class="fas fa-caret-down"></i></a>
+                <a href="#" class="nav__link1">gallery<i class="fas fa-caret-down"></i></a>
                 <div class="dropdown__menu">
                     <ul>
-                        <li><a href="parallax.html">léto</a></li>
-                        <li><a href="parallax2.html">zima</a></li>
+                        <li><a href="parallax_EN.html">summer</a></li>
+                        <li><a href="parallax2_EN.html">winter</a></li>
                     </ul>
                 </div>
             </li>
-  
-  
-  
-  
+
+
+
+
             <li class="nav__item">
-                <a href="index.html#Price" class="nav__link1">cena</a>
+                <a href="index_EN.html#Price" class="nav__link1">Price</a>
             </li>
             <li class="nav__item">
-                <a href="form.html" class="nav__link1">kontakt</a>
+                <a href="form_EN.html" class="nav__link1">Kontakt</a>
             </li>
         </ul>
     </nav>
     <div id="menu-btn" class="fas fa-bars"></div>
-  </section>
-  
+</section>
 
 <!--==================== HEADER END ====================-->
+
+
+
 
 <div class="heading" style="background:url(images/header-bg-2.png) no-repeat">
     <h1 class="recomend">Our Recomendation</h1>
