--- a/parallax.html
+++ b/parallax.html
@@ -12,6 +12,7 @@
 
 <!-- swiper css link -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
+<link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap" rel="stylesheet">
 
 
  <!--=============== FAVICON ===============-->
@@ -42,19 +43,58 @@
 </head>
 <body>
 
-<!--==================== HEADER ====================-->
 
+<!--==================== LOADING SCREEN ====================-->
+
+
+<div id="loading-screen">
+    <div aria-label="Orange and tan hamster running in a metal wheel" role="img" class="wheel-and-hamster">
+        <div class="wheel"></div>
+        <div class="hamster">
+            <div class="hamster__body">
+                <div class="hamster__head">
+                    <div class="hamster__ear"></div>
+                    <div class="hamster__eye"></div>
+                    <div class="hamster__nose"></div>
+                </div>
+                <div class="hamster__limb hamster__limb--fr"></div>
+                <div class="hamster__limb hamster__limb--fl"></div>
+                <div class="hamster__limb hamster__limb--br"></div>
+                <div class="hamster__limb hamster__limb--bl"></div>
+                <div class="hamster__tail"></div>
+            </div>
+        </div>
+        <div class="spoke"></div>
+    </div>
+    <div id="loading-text">Loading <span id="loading-percentage">0%</span></div>
+</div>
+<div id="content" style="display: none;">
+    <!-- Your website content goes here -->
+</div>
+
+
+<!--====================  LOADING SCREEN ====================-->
+
+
+
+
+
+
+
+
+
+<!--==================== HEADER ====================-->
 
 <section class="header" id="header">
     <a href="index.html" class="logo">zelená vila</a>
     <nav class="nav__menu" id="nav-menu">
         <ul class="nav__list">
             <li class="nav__item">
-
+  
                 
                 <div class="wrapper">
                     <label class="switch">
-                        <input type="checkbox" id="checkbox-toggle" />
+                        <input type="checkbox" id="checkbox-toggle_EN" />
                         <span class="slider">
                             <div class="fish">
                                 <div class="body"></div>
@@ -86,46 +126,49 @@
                             </div>
                         </div>
                     </label>
+                    <p class="text-under-toggle">English</p>
+
                 </div>
             </li>
+  
+            
             <li class="nav__item">
                 <div id="btn" class="fas fa-crow"></div>
-                <a href="index.html" class="nav__link1 active-link">home</a>
+                <a href="index.html" class="nav__link1 active-link">úvod</a>
             </li>
             <li class="nav__item">
-                <a href="about.html" class="nav__link1">about</a>
+                <a href="about.html" class="nav__link1">o nás</a>
             </li>
             <li class="nav__item">
-                <a href="package.html" class="nav__link1">package</a>
+                <a href="package.html" class="nav__link1">doporučujeme</a>
             </li>
-
-
-
+  
+  
+  
             <li class="nav__item">
-                <a href="#" class="nav__link1">gallery<i class="fas fa-caret-down"></i></a>
+                <a href="#" class="nav__link1">galerie<i class="fas fa-caret-down"></i></a>
                 <div class="dropdown__menu">
                     <ul>
-                        <li><a href="parallax.html">summer</a></li>
-                        <li><a href="parallax2.html">winter</a></li>
+                        <li><a href="parallax.html">léto</a></li>
+                        <li><a href="parallax2.html">zima</a></li>
                     </ul>
                 </div>
             </li>
-
-
-
-
+  
+  
+  
+  
             <li class="nav__item">
-                <a href="index.html#Price" class="nav__link1">Price</a>
+                <a href="index.html#Price" class="nav__link1">cena</a>
             </li>
             <li class="nav__item">
-                <a href="form.html" class="nav__link1">Kontakt</a>
+                <a href="form.html" class="nav__link1">kontakt</a>
             </li>
         </ul>
     </nav>
     <div id="menu-btn" class="fas fa-bars"></div>
-</section>
-
-
+  </section>
+  
 <!--==================== HEADER END ====================-->
 
 
@@ -243,7 +286,7 @@
 
 
 <script src="js/scrollreveal.min.js"></script>
-<script src="js/script_2.js"></script>
+<script src="js/script_3.js"></script>
 
 
 
