--- a/package.html
+++ b/package.html
@@ -120,14 +120,14 @@
 <!--==================== HEADER END ====================-->
 
 <div class="heading" style="background:url(images/header-bg-2.png) no-repeat">
-    <h1 class="recomend">Our Recomendation</h1>
+    <h1 class="recomend">Naše doporučení</h1>
 </div>
 <!-- packages section starts -->
 
 
 
 <section class="packages">
-    <h1 class="heading-title">Restaurants and places to get taste of South Moravia</h1>
+    <h1 class="heading-title">Restaurace a místa, kde můžete zažít jižní Moravu</h1>
 
     <div class="box-container">
         <div class="box" id="box1">
@@ -135,9 +135,9 @@
                 <img src="images/bukovanskymlyn.jpg" alt="">
             </div>
             <div class="content">
-                <h3>Restaurant-pension</h3>
-                <p>A place to eat some typical Czech cuisine.</p>
-                <a href="https://www.bukovansky-mlyn.cz/" class="btn1">visit now</a>
+                <h3>Restaurace-pension</h3>
+                <p>Místo, kde si můžete dát typickou českou kuchyni.</p>
+                <a href="https://www.bukovansky-mlyn.cz/" class="btn1">navštívit nyní</a>
             </div>
         </div>
         <div class="box" id="box2">
@@ -145,8 +145,8 @@
                 <img src="images/kamenak_myslivna.jpg" alt="">
             </div>
             <div class="content">
-                <h3>Restaurant in the forest</h3>
-                <p>Family friendly restaurant worth to visit.</p>
+                <h3>Restaurace v lese</h3>
+                <p>Rodinná restaurace, kterou stojí za to navštívit.</p>
                 <a href="https://www.tripadvisor.com/Restaurant_Review-g13370609-d13948123-Reviews-Kamenacka_Myslivna-Moravany_South_Moravian_Region_Moravia.html" class="btn1">visit now</a>
             </div>
         </div>
@@ -157,9 +157,9 @@
                 <img src="images/vinarna_skalak.jpg" alt="">
             </div>
             <div class="content">
-                <h3>Winery and pension</h3>
-                <p>One Of The Best Place To Experience Delicious Wine, From South Moravia..</p>
-                <a href="https://sklepskalak.cz/" class="btn1">visit now</a>
+                <h3>Vinařství a penzion</h3>
+                <p>Jedno z nejlepších míst, kde můžete ochutnat lahodné víno z jižní Moravy.</p>
+                <a href="https://sklepskalak.cz/" class="btn1">navštívit nyní</a>
             </div>
         </div>
 
@@ -178,9 +178,9 @@
                 <img src="images/Cimburk.jpg" alt="">
             </div>
             <div class="content">
-                <h3>"New castle" Cimburg</h3>
-                <p>The ruins of Castle Cimburk are under reconstruction, frequently hosting medieval events that are well worth seeing.</p>
-                <a href="https://cimburk.eu/" class="btn1">visit now</a>
+                <h3>"Nový hrad" Cimburg</h3>
+                <p>Zřícenina hradu Cimburk je v rekonstrukci a často se zde konají středověké akce, které stojí za to vidět.</p>
+                <a href="https://cimburk.eu/" class="btn1">navštívit nyní</a>
             </div>
         </div>
 
@@ -192,8 +192,8 @@
             </div>
             <div class="content">
                 <h3>Buchlov</h3>
-                <p>Step into a world of grandeur and mystery at Buchlov, where centuries-old architecture and captivating tales await your exploration.</p>
-                <a href="https://www.hrad-buchlov.cz/en" class="btn1">visit now</a>
+                <p>Vydejte se do světa vznešenosti a tajemství na Buchlově, kde na vás čeká staletá architektura a poutavé příběhy.</p>
+                <a href="https://www.hrad-buchlov.cz/en" class="btn1">navštívit nyní</a>
             </div>
         </div>
 
@@ -203,8 +203,8 @@
             </div>
             <div class="content">
                 <h3>Buchlovice</h3>
-                <p>Stroll through the breathtaking castle gardens, where vibrant flora and serene landscapes create a perfect harmony with the historic beauty of the castle.</p>
-                <a href="https://www.zamek-buchlovice.cz/en" class="btn1">visit now</a>
+                <p>Projděte se úchvatnými zámeckými zahradami, kde živá flóra a klidná krajina tvoří dokonalou harmonii s historickou krásou zámku.</p>
+                <a href="https://www.zamek-buchlovice.cz/en" class="btn1">navštívit nyní</a>
             </div>
         </div>
 
@@ -219,8 +219,8 @@
             </div>
             <div class="content">
                 <h3>Bucovice</h3>
-                <p>Experience the beauty of Bucovice Castle in South Moravia, a stunning example of Italian Renaissance architecture with exquisite gardens.</p>
-                <a href="https://www.zamek-bucovice.cz/en" class="btn1">visit now</a>
+                <p>Poznejte krásu zámku Bučovice na jižní Moravě, který je úžasnou ukázkou italské renesanční architektury s nádhernými zahradami.</p>
+                <a href="https://www.zamek-bucovice.cz/en" class="btn1">navštívit nyní</a>
             </div>
         </div>
 
@@ -230,8 +230,8 @@
             </div>
             <div class="content">
                 <h3>Milotice</h3>
-                <p>Discover the elegance of Milotice Castle in South Moravia, a Baroque masterpiece surrounded by beautifully landscaped gardens.</p>
-                <a href="https://www.zamek-milotice.cz/en" class="btn1">visit now</a>
+                <p>Objevte eleganci zámku Milotice na jižní Moravě, barokního díla obklopeného nádherně upravenými zahradami.</p>
+                <a href="https://www.zamek-milotice.cz/en" class="btn1">navštívit nyní</a>
             </div>
         </div>
 
@@ -240,9 +240,9 @@
                 <img src="images/Ski_Osvetimany.webp" alt="">
             </div>
             <div class="content">
-                <h3>Ski areal Osvětimany</h3>
-                <p>Enjoy the thrill of winter sports at Ski Areal Osvětimany, South Moravia's premier destination for skiing and snowboarding.</p>
-                <a href="https://www.skiosvetimany.cz/" class="btn1">visit now</a>
+                <h3>Lyžařský areál Osvětimany</h3>
+                <p>Užijte si vzrušení ze zimních sportů ve Ski Areálu Osvětimany, hlavní jihomoravské destinaci pro lyžování a snowboarding.</p>
+                <a href="https://www.skiosvetimany.cz/" class="btn1">navštívit nyní</a>
             </div>
         </div>
 
@@ -258,8 +258,8 @@
             </div>
             <div class="content">
                 <h3>Moravsky kras</h3>
-                <p>Embark on an adventure just an hour away to explore captivating caves filled with magic and bats. Discover an underground river and the breathtaking beauty of the region's most photogenic domestic abyss.</p>
-                <a href="https://moravsky-kras.caves.cz/" class="btn1">visit now</a>
+                <p>Vydejte se za dobrodružstvím jen hodinu cesty od hotelu a prozkoumejte podmanivé jeskyně plné kouzel a netopýrů. Objevte podzemní řeku a dechberoucí krásu nejfotogeničtější domácí propasti v regionu..</p>
+                <a href="https://moravsky-kras.caves.cz/" class="btn1">navštívit nyní</a>
             </div>
         </div>
 
@@ -268,9 +268,9 @@
                 <img src="images/Bukovansky_minigolf.jpg" alt="">
             </div>
             <div class="content">
-                <h3>Minigolf "Pod lopatkami" of Bukovan mill</h3>
-                <p>Head to the Kazatelna viewpoint in Koryčany, in the Chřiby Mountains of South Moravia. This scenic spot features a rocky outcrop carved from sandstone and Magura flysch conglomerates. The natural monument sits atop an 8-meter-high cliff, crowned by a two-armed cross. Enjoy captivating vistas and breathtaking views.</p>
-                <a href="https://www.minigolf-bukovany.cz/oteviraci-doba.html" class="btn1">visit now</a>
+                <h3>Minigolfu "Pod lopatkami" u Bukovanského mlýna</h3>
+                <p>V malebné krajině Bukovan vám naše kouzelné minigolfové hřiště nabízí skvělou kombinaci zábavy a odpočinku pro všechny věkové kategorie.</p>                
+                <a href="https://www.minigolf-bukovany.cz/oteviraci-doba.html" class="btn1">navštívit nyní</a>
             </div>
         </div>
 
@@ -280,8 +280,8 @@
             </div>
             <div class="content">
                 <h3>Other tips</h3>
-                <p>Explore 'Other Tips' section for additional insights and recommendations to enhance your experience.</p>
-                <a href="https://www.slovacko.cz/en/" class="btn1">visit now</a>
+                <p>Prozkoumejte sekci "Další tipy", kde najdete další postřehy a doporučení pro zlepšení vašich zkušeností.</p>
+                <a href="https://www.slovacko.cz/en/" class="btn1">navštívit nyní</a>
             </div>
         </div>
         <!-- Repeat for other images... -->
@@ -293,7 +293,7 @@
 
 
         <div class="load-more">
-            <span class="btn" id="loadMoreBtn">load more</span>
+            <span class="btn" id="loadMoreBtn">načíst více</span>
         </div>
 
 
