--- a/package_EN.html
+++ b/package_EN.html
@@ -270,7 +270,7 @@
             </div>
             <div class="content">
                 <h3>Minigolf "Pod lopatkami" of Bukovan mill</h3>
-                <p>Head to the Kazatelna viewpoint in Koryčany, in the Chřiby Mountains of South Moravia. This scenic spot features a rocky outcrop carved from sandstone and Magura flysch conglomerates. The natural monument sits atop an 8-meter-high cliff, crowned by a two-armed cross. Enjoy captivating vistas and breathtaking views.</p>
+                <p>Nestled in the picturesque landscape of Bukovany, our charming minigolf course offers a delightful blend of fun and relaxation for all ages.</p>
                 <a href="https://www.minigolf-bukovany.cz/oteviraci-doba.html" class="btn1">visit now</a>
             </div>
         </div>
