--- a/package_EN.html
+++ b/package_EN.html
@@ -270,7 +270,7 @@
             </div>
             <div class="content">
                 <h3>Minigolf "Pod lopatkami" of Bukovan mill</h3>
-                <p>Nestled in the picturesque landscape of Bukovany, our charming minigolf course offers a delightful blend of fun and relaxation for all ages.</p>
+                <p>Nestled in the picturesque landscape of Bukovany, this charming minigolf course offers a delightful blend of fun and relaxation for all ages.</p>
                 <a href="https://www.minigolf-bukovany.cz/oteviraci-doba.html" class="btn1">visit now</a>
             </div>
         </div>
