--- a/package.html
+++ b/package.html
@@ -269,7 +269,7 @@
             </div>
             <div class="content">
                 <h3>Minigolfu "Pod lopatkami" u Bukovanského mlýna</h3>
-                <p>V malebné krajině Bukovan vám naše kouzelné minigolfové hřiště nabízí skvělou kombinaci zábavy a odpočinku pro všechny věkové kategorie.</p>                
+                <p>V malebné krajině Bukovan vám toto kouzelné minigolfové hřiště nabízí skvělou kombinaci zábavy a odpočinku pro všechny věkové kategorie.</p>                
                 <a href="https://www.minigolf-bukovany.cz/oteviraci-doba.html" class="btn1">navštívit nyní</a>
             </div>
         </div>
