--- a/index_EN.html
+++ b/index_EN.html
@@ -159,7 +159,7 @@
             <div class="swiper-slide slide" style="background:url(images/home-slide-1.jpg) no-repeat">
                 <div class="content">
                     <span>explore, discover, travel</span>
-                    <h3>travel around the Vresovice</h3>
+                    <h3>explore South Moravia</h3>
                     <a href="package.html" class="btn">discover more</a>
                 </div>
             </div>
