--- a/index.html
+++ b/index.html
@@ -160,25 +160,25 @@
 
             <div class="swiper-slide slide" style="background:url(images/home-slide-1.jpg) no-repeat">
                 <div class="content">
-                    <span>explore, discover, travel</span>
-                    <h3>travel around the Vresovice</h3>
-                    <a href="package.html" class="btn">discover more</a>
+                    <span>poznávej, objevovuj, cestuj</span>
+                    <h3>prozkoumej jižní Moravu</h3>
+                    <a href="package.html" class="btn">zjistit více</a>
                 </div>
             </div>
 
             <div class="swiper-slide slide" style="background:url(images/home-slide-2.jpg) no-repeat">
                 <div class="content">
-                    <span>explore, discover, travel</span>
-                    <h3>discover new places</h3>
-                    <a href="package.html" class="btn">discover more</a>
+                    <span>poznávej, objevovuj, cestuj</span>
+                    <h3>objevovuj nová místa</h3>
+                    <a href="package.html" class="btn">zjistit více</a>
                 </div>
             </div>
 
             <div class="swiper-slide slide" style="background:url(images/home-slide-3.jpg) no-repeat; background-position: bottom !important">
                 <div class="content">
-                    <span>explore, discover, travel</span>
-                    <h3>make your travel worthwhile</h3>
-                    <a href="package.html" class="btn">discover more</a>
+                    <span>poznávej, objevovuj, cestuj</span>
+                    <h3>aby váš příběh stál za to</h3>
+                    <a href="package.html" class="btn">zjistit více</a>
                 </div>
             </div>
 
@@ -208,7 +208,7 @@
     <div class="content">
         <h3>o nás</h3>
         <p>Objevte naše klidné útočiště, které se nachází v blízkosti klidného lesa v tiché vesnici. 
-            Zde si můžete odpočinout v naší příjemné sauně, horké trubce a útulném krbu, 
+            Zde si můžete odpočinout v naší příjemné sauně, vířivce a útulném krbu, 
             vše navrženo pro vaši dokonalou relaxaci a pohodlí.</p>
 
         <a href="about.html" class="btn">číst více</a>
